Revision history for Dist-Zilla-Plugin-DynamicPrereqs

{{$NEXT}}
          - added new helper subs: requires, runtime_requires,
            build_requires, and test_requires, as sugar for updating prereqs
            in Makefile.PL

0.015     2015-08-21 23:49:23Z
          - has_module($module) now returns the $VERSION of the installed
            module, or undef otherwise, if a second argument is not passed

0.014     2015-07-22 02:41:49Z
          - new '-condition' option, as sugar to provide expressions to be
            inserted into Makefile.PL (definitions of referenced subroutines
            are automatically included)

0.013     2015-05-30 19:16:03Z
          - require a new enough Module::CoreList in tests to ensure is_core()
            is available

0.012     2015-05-25 00:47:09Z
          - fix test failure with PadWalker on older perls

0.011     2015-05-23 18:27:08Z
          - warn whenever can_xs, can_cc, or can_run is used, until
            implementation concerns are resolved
          - add new sub has_module, as an alternative to can_use that does
            not load the module

0.010     2015-02-15 01:12:41Z (TRIAL RELEASE)
          - new -raw_from_file option, when content is too long to inline into
            dist.ini
          - new -include_sub option, to include definitions of commonly-used
            helper subroutines

0.009     2014-11-29 06:28:55Z
          - bump minimum required version of ExtUtils::MakeMaker, to avoid a
            mess in MYMETA.json during testing

0.008     2014-10-08 04:44:15Z
          - fix uninitialized warning on 5.10.x and earlier

0.007     2014-09-18 05:26:51Z
          - new '-delimiter' option, which allows the use of leading whitespace in
            '-raw' strings

0.006     2014-09-06 08:44:46Z
          - no longer dropping the last character off Makefile.PL (significant
            when several copies of this plugin run at once!)

0.005     2014-06-16 00:18:15Z